--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 ktor:
   application:
     modules:
-      - io.syhids.ApplicationKt.module
+      - io.syhids.vanguardian.server.ApplicationKt.module
   deployment:
     port: 8080
